fix: fixing text truncation in docs

--- a/assets/css/doc-content.pcss
+++ b/assets/css/doc-content.pcss
@@ -7,6 +7,7 @@
   line-height: 1.6;
   @media (--desktop) {
     flex: 1;
+    max-width: calc(100% - 12rem);
     margin-top: 6rem;
   }
   & h1 {
